dfir_rs/tests/compile-fail/nightly/surface_singleton_adjacent.stderr
error: Adjacent handoff/singleton operators are not allowed. Remove one or insert an operator between them.
 --> tests/compile-fail/nightly/surface_singleton_adjacent.rs:5:46
  |
5 |         source_iter(0..10) -> singleton() -> singleton() -> for_each(std::mem::drop);
  |                                              ^^^^^^^^^
